--- a/999.md
+++ b/999.md
@@ -64,27 +64,36 @@ A Jupyter Notebook is like a **smart digital notebook** where you can write and 
 
 # 🐍 **4. Your First Python Code (Step-by-Step)** 🚀
 ### **🔹 Print a Message** 📢
-👉 **Step 1:** Click inside a code cell  
-👉 **Step 2:** Type this code:  
+👉 **Step 1:** Click inside a code cell (A gray box labeled 'Code')  
+👉 **Step 2:** Type this code exactly as shown below:  
 ```python
 print("Hello AI World!")
 ```
-👉 **Step 3:** Press **Shift + Enter** to run it! 🎉
+👉 **Step 3:** Press **Shift + Enter** to run it! 🎉  
+✅ If done correctly, you should see: `Hello AI World!` printed below the cell.
 
 ### **🔹 Do Basic Math** ➕➖
+👉 **Step 1:** Click inside a new code cell  
+👉 **Step 2:** Type this code:  
 ```python
 a = 10
 b = 5
 sum = a + b
 print("The sum is:", sum)
 ```
-🧐 **What’s happening?** The computer adds 10 + 5 and prints the result! 🔢
+👉 **Step 3:** Press **Shift + Enter** to run it!  
+🧐 **What’s happening?** The computer adds `10 + 5` and prints the result! 🔢
 
 ### **🔹 AI-Powered Interaction** 🤖
+👉 **Step 1:** Click inside a new code cell  
+👉 **Step 2:** Type this code:  
 ```python
 name = input("What’s your name? ")
 print("Nice to meet you, " + name + "!")
 ```
+👉 **Step 3:** Press **Shift + Enter**, then type your name in the box that appears and hit **Enter**  
+✅ AI will greet you with: `Nice to meet you, [Your Name]!`
+
 🎯 **Challenge:** Modify the message or numbers and rerun!
 
 💡 **Extra Tip:** Google Colab allows you to run one code block at a time. If something goes wrong, just re-run the block!
@@ -117,12 +126,4 @@ print("Nice to meet you, " + name + "!")
 ---
 
 # 🔗 **Additional AI Resources** 📚
-- **<a href="https://colab.research.google.com/" target="_blank">Google Colab</a>** 🖥️  
-- **<a href="https://teachablemachine.withgoogle.com/" target="_blank">Teachable Machine</a>** 🎓  
-- **<a href="https://chat.openai.com/" target="_blank">ChatGPT</a>** 💬  
-- **<a href="https://openai.com/dall-e" target="_blank">DALL·E</a>** 🎨  
-- **<a href="https://www.python.org/" target="_blank">Python Basics</a>** 🐍  
-- **<a href="https://ai-4-all.org/" target="_blank">AI4All (Interactive AI Learning)</a>** 🔥  
-- **<a href="https://quickdraw.withgoogle.com/" target="_blank">Quick, Draw!</a>** ✏️  
-
 🎉 **You did it! Keep exploring AI, and see you at the next workshop! 🚀**
