--- a/999.md
+++ b/999.md
@@ -65,33 +65,33 @@ A Jupyter Notebook is like a **smart digital notebook** where you can write and 
 # 🐍 **4. Your First Python Code (Step-by-Step)** 🚀
 ### **🔹 Print a Message** 📢
 👉 **Step 1:** Click inside a code cell (A gray box labeled 'Code')  
-👉 **Step 2:** Type this code exactly as shown below:  
+👉 **Step 2:** Copy and paste the following code:  
 ```python
 print("Hello AI World!")
 ```
-👉 **Step 3:** Press **Shift + Enter** to run it! 🎉  
+👉 **Step 3:** Press the **Play Icon** to run it! 🎉  
 ✅ If done correctly, you should see: `Hello AI World!` printed below the cell.
 
 ### **🔹 Do Basic Math** ➕➖
 👉 **Step 1:** Click inside a new code cell  
-👉 **Step 2:** Type this code:  
+👉 **Step 2:** Copy and paste the following code:  
 ```python
 a = 10
 b = 5
 sum = a + b
 print("The sum is:", sum)
 ```
-👉 **Step 3:** Press **Shift + Enter** to run it!  
+👉 **Step 3:** Press the **Play Icon** to run it!  
 🧐 **What’s happening?** The computer adds `10 + 5` and prints the result! 🔢
 
 ### **🔹 AI-Powered Interaction** 🤖
 👉 **Step 1:** Click inside a new code cell  
-👉 **Step 2:** Type this code:  
+👉 **Step 2:** Copy and paste the following code:  
 ```python
 name = input("What’s your name? ")
 print("Nice to meet you, " + name + "!")
 ```
-👉 **Step 3:** Press **Shift + Enter**, then type your name in the box that appears and hit **Enter**  
+👉 **Step 3:** Press the **Play Icon** to run it, then type your name in the box that appears and hit **Enter**  
 ✅ AI will greet you with: `Nice to meet you, [Your Name]!`
 
 🎯 **Challenge:** Modify the message or numbers and rerun!
