--- a/999.md
+++ b/999.md
@@ -115,7 +115,7 @@ print("Nice to meet you, " + name + "!")
 ---
 
 # 🎯 **6. Wrap-Up & Next Steps**
-🎉 **Great job!** You explored AI, learned Python, and even trained an AI model! Here’s what we covered:
+🎉 **Great job!** You explored AI, learned Python, and even trained an AI model! Here’s what we covered:\
 ✅ AI is all around us—from voice assistants to movie recommendations! 🎥🎶  
 ✅ Jupyter Notebooks let us write and run Python code in the cloud ☁️💻  
 ✅ We wrote Python code: printing, doing math, and taking user input 🐍✍️  
