--- a/911.md
+++ b/911.md
@@ -34,14 +34,15 @@ A **dataset** is a collection of structured information that AI models use to le
 
 ### 🚀 **Step 1: Open Google Colab**  
 1️⃣ Open your browser and go to **[Google Colab](https://colab.research.google.com/)**.  
-2️⃣ Click **File** → **New Notebook**.  
-3️⃣ Click the title (*Untitled.ipynb*), rename it to **"AI Data Workshop"**, and press **Enter**.  
+2️⃣ Click **+ New notebook**.  
 
 ---
 
 ## 💾 **3. Loading the Dataset**  
 
-### **Step 2: Add a New Code Cell and Copy This Code**  
+### **Step 2: Add a New Code Cell**  
+1️⃣ Click **+ Code** in the top left to add a new code cell.  
+2️⃣ Copy and paste the following code into the new code cell.  
 
 ```python
 # Import the Pandas library to handle data
@@ -65,7 +66,9 @@ data
 
 ## 🧹 **4. Cleaning the Data**  
 
-### **Step 4: Add Another Code Cell and Copy This Code**  
+### **Step 4: Add a New Code Cell**  
+1️⃣ Click **+ Code** to add another code cell.  
+2️⃣ Copy and paste the following code into the new code cell.  
 
 ```python
 # Fill missing values with the column average
@@ -82,7 +85,9 @@ data
 
 ## 📊 **5. Analyzing the Data**  
 
-### **Step 6: Add Another Code Cell and Copy This Code**  
+### **Step 6: Add a New Code Cell**  
+1️⃣ Click **+ Code** to add another code cell.  
+2️⃣ Copy and paste the following code into the new code cell.  
 
 ```python
 # Show basic statistics like mean, min, and max values
@@ -96,7 +101,9 @@ data.describe()
 
 ### **Sorting Data to Find Top Scores**  
 
-### **Step 8: Add Another Code Cell and Copy This Code**  
+### **Step 8: Add a New Code Cell**  
+1️⃣ Click **+ Code** to add another code cell.  
+2️⃣ Copy and paste the following code into the new code cell.  
 
 ```python
 # Sort students by their scores (highest first)
@@ -112,7 +119,9 @@ data.sort_values(by="Score", ascending=False)
 
 ### **📊 Bar Chart: Comparing Scores**  
 
-### **Step 10: Add Another Code Cell and Copy This Code**  
+### **Step 10: Add a New Code Cell**  
+1️⃣ Click **+ Code** to add another code cell.  
+2️⃣ Copy and paste the following code into the new code cell.  
 
 ```python
 # Import visualization libraries
@@ -132,7 +141,9 @@ plt.show()
 
 ### **🔎 Scatter Plot: Finding Patterns**  
 
-### **Step 12: Add Another Code Cell and Copy This Code**  
+### **Step 12: Add a New Code Cell**  
+1️⃣ Click **+ Code** to add another code cell.  
+2️⃣ Copy and paste the following code into the new code cell.  
 
 ```python
 # Create a scatter plot for Age vs. Score
