--- a/911.md
+++ b/911.md
@@ -1,36 +1,35 @@
-# 🚀✨ **Workshop: Exploring, Cleaning, and Visualizing AI Data with Python!** ✨🚀  
+# 🚀✨ **Workshop: Building a Simple Machine Learning Model!** ✨🚀  
 
 ---
 
 ## 🎯 **Goal**  
-📊 Learn how to **clean, analyze, and visualize** real-world datasets using Python tools like Pandas and Seaborn. No prior experience needed—just bring your curiosity and creativity! 🚀  
+🤖 Learn how to create a **basic machine learning model** using Python’s Scikit-Learn. No prior experience needed—just follow along and have fun! 🚀  
 
 ---
 
 ## 📌 **What You Will Learn** 🧠💡  
-✅ What datasets are and why they matter 📂  
-✅ How to **clean** messy data and handle missing values 🧹🔍  
-✅ How to **analyze** data to find patterns and insights 📈📉  
-✅ How to **visualize** data using colorful charts 🎨📊  
+✅ What machine learning is and why it matters  
+✅ How to **load and prepare** data for training  
+✅ How to **train a model** to make predictions  
+✅ How to **evaluate** the model’s performance  
 ✅ Hands-on coding with **Google Colab** for easy Python use 🚀  
 
 ---
 
-## 📚 **1. Understanding Datasets** 🤔  
+## 🤔 **1. Understanding Machine Learning**  
 
-### **What is a Dataset?** 📂  
-A **dataset** is a collection of structured information that AI models use to learn. Data can come in different formats, such as:  
+### **What is Machine Learning?**  
+Machine Learning (ML) is a way for computers to **learn from data** and make predictions without being explicitly programmed. Some examples include:  
 
-📸 **Images** (e.g., photos of animals for recognition)  
-📜 **Text** (e.g., social media posts for chatbots)  
-📊 **Numbers** (e.g., weather reports for predictions)  
-🎵 **Audio** (e.g., music for recommendations)  
+🎵 **Music Recommendations** (e.g., Spotify suggesting songs you might like)  
+📧 **Spam Detection** (e.g., filtering junk emails)  
+🚗 **Self-Driving Cars** (e.g., recognizing pedestrians and traffic signs)  
 
-💡 **Think:** Where else do you see AI using datasets in real life? 🤔💭  
+💡 **Think:** Where else do you see AI making predictions in real life? 🤔💭  
 
 ---
 
-## 🔍 **2. Hands-on: Exploring a Real Dataset**  
+## 🔍 **2. Hands-on: Creating a Simple ML Model**  
 
 ### 🚀 **Step 1: Open Google Colab**  
 1️⃣ Open your browser and go to **[Google Colab](https://colab.research.google.com/)**.  
@@ -38,138 +37,158 @@ A **dataset** is a collection of structured information that AI models use to le
 
 ---
 
-## 💾 **3. Loading the Dataset**  
+## 💾 **3. Importing Required Libraries**  
 
 ### **Step 2: Add a New Code Cell**  
 1️⃣ Click **+ Code** in the top left to add a new code cell.  
 2️⃣ Copy and paste the following code into the new code cell.  
 
 ```python
-# Import the Pandas library to handle data
-import pandas as pd  
-
-# Create a simple dataset with missing values
-data = pd.DataFrame({
-    'Name': ['Alice', 'Bob', 'Charlie', 'David', 'Eve'],
-    'Age': [25, 30, 35, None, 40],  # One missing age
-    'Score': [90, 85, 88, 92, None]  # One missing score
-})
-
-# Display the dataset
-data
+# Import necessary libraries
+import numpy as np  # For numerical operations
+import pandas as pd  # For handling datasets
+import matplotlib.pyplot as plt  # For visualizing data
+from sklearn.model_selection import train_test_split  # For splitting data
+from sklearn.linear_model import LinearRegression  # Machine learning model
+from sklearn.metrics import mean_squared_error  # For evaluating model performance
 ```
 
 ### **Step 3: Run the Code**  
-▶ Click **Run** (▶) and check the output! You will see a small table with missing values (NaN).  
+▶ Click **Run** (▶) to load the necessary Python libraries.  
 
 ---
 
-## 🧹 **4. Cleaning the Data**  
+## 📊 **4. Loading and Exploring the Dataset**  
 
 ### **Step 4: Add a New Code Cell**  
 1️⃣ Click **+ Code** to add another code cell.  
 2️⃣ Copy and paste the following code into the new code cell.  
 
 ```python
-# Fill missing values with the column average
-data.fillna(data.mean(), inplace=True)
+# Create a simple dataset
+np.random.seed(0)  # Ensure reproducibility
+X = np.random.rand(100, 1) * 10  # Random numbers between 0 and 10
+y = 2.5 * X + np.random.randn(100, 1) * 2  # Linear relation with some noise
 
-# Show the cleaned dataset
-data
+# Convert to DataFrame for better visualization
+data = pd.DataFrame({'Feature': X.flatten(), 'Target': y.flatten()})
+data.head()  # Display the first few rows
 ```
 
 ### **Step 5: Run the Code**  
-▶ Click **Run** (▶) and check the output. Now, there are no missing values! 🎉  
+▶ Click **Run** (▶) to see the dataset. It contains one feature (X) and one target (y).  
 
 ---
 
-## 📊 **5. Analyzing the Data**  
+## ✂ **5. Splitting the Data**  
 
 ### **Step 6: Add a New Code Cell**  
 1️⃣ Click **+ Code** to add another code cell.  
 2️⃣ Copy and paste the following code into the new code cell.  
 
 ```python
-# Show basic statistics like mean, min, and max values
-data.describe()
+# Split dataset into training (80%) and testing (20%)
+X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)
+
+# Show the size of training and testing sets
+X_train.shape, X_test.shape
 ```
 
 ### **Step 7: Run the Code**  
-▶ Click **Run** (▶) to see useful insights like average scores and ages.  
+▶ Click **Run** (▶) to check the data split.  
 
 ---
 
-### **Sorting Data to Find Top Scores**  
+## 🤖 **6. Training the Machine Learning Model**  
 
 ### **Step 8: Add a New Code Cell**  
 1️⃣ Click **+ Code** to add another code cell.  
 2️⃣ Copy and paste the following code into the new code cell.  
 
 ```python
-# Sort students by their scores (highest first)
-data.sort_values(by="Score", ascending=False)
+# Create a linear regression model
+model = LinearRegression()
+
+# Train the model using training data
+model.fit(X_train, y_train)
 ```
 
 ### **Step 9: Run the Code**  
-▶ Click **Run** (▶) and see students ranked by their scores!  
+▶ Click **Run** (▶) to train the model.  
 
 ---
 
-## 🎨 **6. Visualizing Data**  
-
-### **📊 Bar Chart: Comparing Scores**  
+## 🔮 **7. Making Predictions**  
 
 ### **Step 10: Add a New Code Cell**  
 1️⃣ Click **+ Code** to add another code cell.  
 2️⃣ Copy and paste the following code into the new code cell.  
 
 ```python
-# Import visualization libraries
-import seaborn as sns  
-import matplotlib.pyplot as plt  
+# Predict using the test dataset
+y_pred = model.predict(X_test)
 
-# Create a bar chart of student scores
-sns.barplot(x=data["Name"], y=data["Score"])  
-plt.title("Student Scores")  
-plt.show()
+# Display first few predictions
+pd.DataFrame({'Actual': y_test.flatten(), 'Predicted': y_pred.flatten()}).head()
 ```
 
 ### **Step 11: Run the Code**  
-▶ Click **Run** (▶) and check the **colorful bar chart** comparing student scores!  
+▶ Click **Run** (▶) to see how well the model is predicting values.  
 
 ---
 
-### **🔎 Scatter Plot: Finding Patterns**  
+## 📉 **8. Evaluating the Model**  
 
 ### **Step 12: Add a New Code Cell**  
 1️⃣ Click **+ Code** to add another code cell.  
 2️⃣ Copy and paste the following code into the new code cell.  
 
 ```python
-# Create a scatter plot for Age vs. Score
-sns.scatterplot(x=data["Age"], y=data["Score"])  
-plt.title("Age vs. Score")  
-plt.show()
+# Calculate and display Mean Squared Error (MSE)
+mse = mean_squared_error(y_test, y_pred)
+print(f'Mean Squared Error: {mse:.2f}')
 ```
 
 ### **Step 13: Run the Code**  
-▶ Click **Run** (▶) to see if older students tend to have higher scores!  
+▶ Click **Run** (▶) to check how accurate the model is. Lower MSE means better performance!  
 
 ---
 
-## 🎯 **7. Wrap-Up & Next Steps**  
+## 🎨 **9. Visualizing the Model**  
 
-🎉 Congratulations! You learned how to:  
-✅ Load a dataset 🔍📂  
-✅ Clean missing values 🧹✨  
-✅ Analyze data using basic statistics 📊  
-✅ Create colorful visualizations 🎨  
+### **Step 14: Add a New Code Cell**  
+1️⃣ Click **+ Code** to add another code cell.  
+2️⃣ Copy and paste the following code into the new code cell.  
 
-🚀 **Next Workshop:** Building a Simple AI Model with Data! 🤖  
+```python
+# Plot actual vs predicted values
+plt.scatter(X_test, y_test, color='blue', label='Actual Values')
+plt.plot(X_test, y_pred, color='red', linewidth=2, label='Predicted Line')
+plt.xlabel('Feature')
+plt.ylabel('Target')
+plt.title('Linear Regression Model')
+plt.legend()
+plt.show()
+```
 
-🔗 **Additional AI Resources** 📚  
+### **Step 15: Run the Code**  
+▶ Click **Run** (▶) to visualize how well the model fits the data! 🎉  
+
+---
+
+## 🎯 **10. Wrap-Up & Next Steps**  
+
+🎉 Congratulations! You built a **simple machine learning model** from scratch! Here’s what you learned:  
+✅ How to prepare data  
+✅ How to train a machine learning model  
+✅ How to make predictions  
+✅ How to evaluate and visualize results  
+
+🚀 **Next Workshop:** Expanding ML with Classification Models! 🤖  
+
+🔗 **Additional ML Resources** 📚  
 - [Google Colab Guide](https://colab.research.google.com/)  
-- [Python for Beginners](https://www.python.org/doc/)  
-- [AI for Kids](https://ai4k12.org/)  
+- [Scikit-Learn Documentation](https://scikit-learn.org/stable/)  
+- [Machine Learning for Beginners](https://www.coursera.org/learn/ml-foundations)  
 
-🎉 Keep exploring AI, and see you at the next workshop! 🚀
+🎉 Keep learning, and see you at the next workshop! 🚀  
