--- a/911.md
+++ b/911.md
@@ -1,194 +1,102 @@
-# 🚀✨ **Workshop: Building a Simple Machine Learning Model!** ✨🚀  
+# 🚀✨ **Workshop: Building a Simple ML Model for Beginners!** ✨🚀  
 
 ---
 
 ## 🎯 **Goal**  
-🤖 Learn how to create a **basic machine learning model** using Python’s Scikit-Learn. No prior experience needed—just follow along and have fun! 🚀  
+🤖 Learn how to **build, train, and use a simple ML model** using Python. No prior experience needed—just bring your curiosity! 🚀  
 
 ---
 
 ## 📌 **What You Will Learn** 🧠💡  
-✅ What machine learning is and why it matters  
-✅ How to **load and prepare** data for training  
-✅ How to **train a model** to make predictions  
-✅ How to **evaluate** the model’s performance  
+✅ What a machine learning model is  
+✅ How to prepare and clean data for ML  
+✅ How to train a simple ML model  
+✅ How to make predictions with the model  
 ✅ Hands-on coding with **Google Colab** for easy Python use 🚀  
 
 ---
 
-## 🤔 **1. Understanding Machine Learning**  
+## 🤖 **1. What is a Machine Learning (ML) Model?**  
+A **Machine Learning (ML) model** is a program that learns from data to make predictions. Instead of explicitly programming rules, an ML model finds relationships in the data and uses them to make future predictions.  
 
-### **What is Machine Learning?**  
-Machine Learning (ML) is a way for computers to **learn from data** and make predictions without being explicitly programmed. Some examples include:  
-
-🎵 **Music Recommendations** (e.g., Spotify suggesting songs you might like)  
-📧 **Spam Detection** (e.g., filtering junk emails)  
-🚗 **Self-Driving Cars** (e.g., recognizing pedestrians and traffic signs)  
-
-💡 **Think:** Where else do you see AI making predictions in real life? 🤔💭  
+### 🔍 **Example:**  
+- If we provide a model with students’ ages and test scores, it can learn the pattern and predict a new student’s score based on their age.  
 
 ---
 
-## 🔍 **2. Hands-on: Creating a Simple ML Model**  
+## 🔍 **2. Hands-on: Building a Simple ML Model**  
 
 ### 🚀 **Step 1: Open Google Colab**  
-1️⃣ Open your browser and go to **[Google Colab](https://colab.research.google.com/)**.  
-2️⃣ Click **+ New notebook**.  
+1⃣ Open your browser and go to **[Google Colab](https://colab.research.google.com/)**.  
+2⃣ Click **+ New notebook**.  
 
----
-
-## 💾 **3. Importing Required Libraries**  
-
-### **Step 2: Add a New Code Cell**  
-1️⃣ Click **+ Code** in the top left to add a new code cell.  
-2️⃣ Copy and paste the following code into the new code cell.  
-
+### 💾 **Step 2: Load and Explore the Dataset**  
 ```python
-# Import necessary libraries
-import numpy as np  # For numerical operations
-import pandas as pd  # For handling datasets
-import matplotlib.pyplot as plt  # For visualizing data
-from sklearn.model_selection import train_test_split  # For splitting data
-from sklearn.linear_model import LinearRegression  # Machine learning model
-from sklearn.metrics import mean_squared_error  # For evaluating model performance
+import pandas as pd  # Import Pandas library for data handling
+
+# Create a small dataset
+data = pd.DataFrame({
+    'Age': [18, 20, 22, 24, 26, 28, 30],  # Input: Age of students
+    'Score': [70, 75, 78, 80, 85, 87, 90]  # Output: Test scores
+})
+
+# Display the dataset
+data
 ```
+▶ Click **Run** (▶) and observe the dataset!  
 
-### **Step 3: Run the Code**  
-▶ Click **Run** (▶) to load the necessary Python libraries.  
-
----
-
-## 📊 **4. Loading and Exploring the Dataset**  
-
-### **Step 4: Add a New Code Cell**  
-1️⃣ Click **+ Code** to add another code cell.  
-2️⃣ Copy and paste the following code into the new code cell.  
-
+### 🔧 **Step 3: Train a Simple ML Model**  
 ```python
-# Create a simple dataset
-np.random.seed(0)  # Ensure reproducibility
-X = np.random.rand(100, 1) * 10  # Random numbers between 0 and 10
-y = 2.5 * X + np.random.randn(100, 1) * 2  # Linear relation with some noise
+from sklearn.linear_model import LinearRegression  # Import ML model
 
-# Convert to DataFrame for better visualization
-data = pd.DataFrame({'Feature': X.flatten(), 'Target': y.flatten()})
-data.head()  # Display the first few rows
+X = data[['Age']]  # Feature (Input: Age)
+y = data['Score']  # Target (Output: Score)
+
+model = LinearRegression()  # Create the model
+model.fit(X, y)  # Train the model
 ```
+▶ Click **Run** (▶) to train the ML model!  
 
-### **Step 5: Run the Code**  
-▶ Click **Run** (▶) to see the dataset. It contains one feature (X) and one target (y).  
-
----
-
-## ✂ **5. Splitting the Data**  
-
-### **Step 6: Add a New Code Cell**  
-1️⃣ Click **+ Code** to add another code cell.  
-2️⃣ Copy and paste the following code into the new code cell.  
-
+### 🔮 **Step 4: Make Predictions**  
 ```python
-# Split dataset into training (80%) and testing (20%)
-X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)
-
-# Show the size of training and testing sets
-X_train.shape, X_test.shape
+predicted_score = model.predict([[25]])  # Predict score for age 25
+print("Predicted Score for Age 25:", predicted_score[0])
 ```
+▶ Click **Run** (▶) to see the predicted test score!  
 
-### **Step 7: Run the Code**  
-▶ Click **Run** (▶) to check the data split.  
-
----
-
-## 🤖 **6. Training the Machine Learning Model**  
-
-### **Step 8: Add a New Code Cell**  
-1️⃣ Click **+ Code** to add another code cell.  
-2️⃣ Copy and paste the following code into the new code cell.  
-
+### 📊 **Step 5: Visualizing Predictions**  
 ```python
-# Create a linear regression model
-model = LinearRegression()
+import matplotlib.pyplot as plt  # Import plotting library
+import numpy as np  # Import numpy for calculations
 
-# Train the model using training data
-model.fit(X_train, y_train)
-```
+# Generate age values for prediction line
+age_range = np.linspace(18, 30, 100).reshape(-1, 1)
+predicted_scores = model.predict(age_range)  
 
-### **Step 9: Run the Code**  
-▶ Click **Run** (▶) to train the model.  
-
----
-
-## 🔮 **7. Making Predictions**  
-
-### **Step 10: Add a New Code Cell**  
-1️⃣ Click **+ Code** to add another code cell.  
-2️⃣ Copy and paste the following code into the new code cell.  
-
-```python
-# Predict using the test dataset
-y_pred = model.predict(X_test)
-
-# Display first few predictions
-pd.DataFrame({'Actual': y_test.flatten(), 'Predicted': y_pred.flatten()}).head()
-```
-
-### **Step 11: Run the Code**  
-▶ Click **Run** (▶) to see how well the model is predicting values.  
-
----
-
-## 📉 **8. Evaluating the Model**  
-
-### **Step 12: Add a New Code Cell**  
-1️⃣ Click **+ Code** to add another code cell.  
-2️⃣ Copy and paste the following code into the new code cell.  
-
-```python
-# Calculate and display Mean Squared Error (MSE)
-mse = mean_squared_error(y_test, y_pred)
-print(f'Mean Squared Error: {mse:.2f}')
-```
-
-### **Step 13: Run the Code**  
-▶ Click **Run** (▶) to check how accurate the model is. Lower MSE means better performance!  
-
----
-
-## 🎨 **9. Visualizing the Model**  
-
-### **Step 14: Add a New Code Cell**  
-1️⃣ Click **+ Code** to add another code cell.  
-2️⃣ Copy and paste the following code into the new code cell.  
-
-```python
-# Plot actual vs predicted values
-plt.scatter(X_test, y_test, color='blue', label='Actual Values')
-plt.plot(X_test, y_pred, color='red', linewidth=2, label='Predicted Line')
-plt.xlabel('Feature')
-plt.ylabel('Target')
-plt.title('Linear Regression Model')
+# Create scatter plot
+plt.scatter(data['Age'], data['Score'], color='blue', label='Actual Data')
+plt.plot(age_range, predicted_scores, color='red', label='Prediction Line')
+plt.xlabel('Age')
+plt.ylabel('Score')
+plt.title('ML Model: Predicting Scores Based on Age')
 plt.legend()
 plt.show()
 ```
-
-### **Step 15: Run the Code**  
-▶ Click **Run** (▶) to visualize how well the model fits the data! 🎉  
+▶ Click **Run** (▶) to visualize the ML model's predictions! 🎨📊  
 
 ---
 
-## 🎯 **10. Wrap-Up & Next Steps**  
+## 🎯 **6. Wrap-Up & Next Steps**  
+🎉 Congratulations! You learned how to:  
+✅ Create a dataset 📂  
+✅ Train a **basic ML model** to make predictions 🤖  
+✅ Visualize predictions with a chart 📊  
 
-🎉 Congratulations! You built a **simple machine learning model** from scratch! Here’s what you learned:  
-✅ How to prepare data  
-✅ How to train a machine learning model  
-✅ How to make predictions  
-✅ How to evaluate and visualize results  
+🚀 **Next Workshop:** Exploring More AI Models! 🤖  
 
-🚀 **Next Workshop:** Expanding ML with Classification Models! 🤖  
-
-🔗 **Additional ML Resources** 📚  
+🔗 **Additional AI Resources** 📚  
 - [Google Colab Guide](https://colab.research.google.com/)  
-- [Scikit-Learn Documentation](https://scikit-learn.org/stable/)  
-- [Machine Learning for Beginners](https://www.coursera.org/learn/ml-foundations)  
+- [Python for Beginners](https://www.python.org/doc/)  
+- [AI for Kids](https://ai4k12.org/)  
 
-🎉 Keep learning, and see you at the next workshop! 🚀  
+🎉 Keep learning AI, and see you at the next workshop! 🚀
